--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
+                                                   tools:context=".MainActivity">
 
   <ImageView
           android:src="@drawable/track_icon"
           android:layout_width="60dp"
           android:layout_height="53dp"
           android:id="@+id/imageView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="28dp"
-          android:layout_marginTop="44dp" app:layout_constraintTop_toTopOf="parent"/>
+          android:layout_marginTop="48dp" app:layout_constraintTop_toTopOf="parent"/>
   <TextView
           android:text="Raze Galactic"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/textView2"
           android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-          app:layout_constraintTop_toTopOf="@+id/imageView2" app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-          app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-          app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+          app:layout_constraintTop_toTopOf="@+id/imageView2"
+          android:layout_marginBottom="47dp"
+          app:layout_constraintVertical_bias="0.0"
+          app:layout_constraintBottom_toBottomOf="@+id/imageView2" android:layout_marginStart="8dp"
+          app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+          app:layout_constraintEnd_toEndOf="parent"/>
+  <Button
+          android:text="Google Sign-In"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:id="@+id/button"
+          app:layout_constraintStart_toStartOf="@+id/textView2" android:layout_marginBottom="48dp"
+          app:layout_constraintBottom_toTopOf="@+id/button2"/>
+  <Button
+          android:text="Sign Up"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:id="@+id/button2"
+          app:layout_constraintStart_toStartOf="@+id/button" android:layout_marginBottom="47dp"
+          app:layout_constraintBottom_toTopOf="@+id/textView3"/>
+  <Button
+          android:text="Login"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:id="@+id/button3" app:layout_constraintStart_toEndOf="@+id/button2" android:layout_marginStart="30dp"
+          app:layout_constraintTop_toTopOf="@+id/button2" app:layout_constraintBottom_toBottomOf="@+id/button2"
+          app:layout_constraintVertical_bias="0.0"/>
+  <TextView
+          android:text="Show More"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:id="@+id/textView3"
+          app:layout_constraintStart_toStartOf="@+id/button2" android:layout_marginBottom="48dp"
+          app:layout_constraintBottom_toTopOf="@+id/textView4"/>
+  <TextView
+          android:text="By signing up, I agree to Raze Galactic's Terms of Service, Privacy Policy, Refund Policy, and Accidental Vacuum Induced Asphyxiation Polciy"
+          android:layout_width="228dp"
+          android:layout_height="wrap_content"
+          android:id="@+id/textView4" android:layout_marginBottom="8dp"
+          app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/textView3"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
