--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
+                                                   tools:context=".MainActivity">
+
+  <ImageView
+      android:id="@+id/imageView2"
+      android:layout_width="46dp"
+      android:layout_height="49dp"
+      android:layout_marginStart="36dp"
+      android:layout_marginTop="48dp"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/track_icon"/>
 
   <TextView
+      android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Hello World!"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      android:layout_marginBottom="57dp"
+      android:layout_marginStart="8dp"
+      android:text="Raze Galactic"
+      android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+      app:layout_constraintBottom_toTopOf="@+id/button"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/imageView2"
+      app:layout_constraintVertical_bias="0.7"
+      />
 
+  <Button
+      android:id="@+id/button"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="58dp"
+      android:text="Google Sign-In"
+      app:layout_constraintBottom_toTopOf="@+id/button2"
+      app:layout_constraintStart_toStartOf="@+id/button2"
+      />
+
+  <Button
+      android:id="@+id/button2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="58dp"
+      android:text="Sign Up"
+      app:layout_constraintBottom_toTopOf="@+id/textView3"
+      app:layout_constraintStart_toStartOf="@+id/textView3"
+      />
+
+  <Button
+      android:id="@+id/button3"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="32dp"
+      android:text="Login"
+      app:layout_constraintBottom_toBottomOf="@+id/button2"
+      app:layout_constraintStart_toEndOf="@+id/button2"
+      app:layout_constraintTop_toTopOf="@+id/button2"
+      app:layout_constraintVertical_bias="0.0"/>
+
+  <TextView
+      android:id="@+id/textView3"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="58dp"
+      android:text="Show More"
+      app:layout_constraintBottom_toTopOf="@+id/textView4"
+      app:layout_constraintStart_toStartOf="@+id/textView4"
+      />
+
+  <TextView
+      android:id="@+id/textView4"
+      android:layout_width="228dp"
+      android:layout_height="94dp"
+      android:layout_marginBottom="8dp"
+      android:layout_marginStart="8dp"
+      android:text="By signing up, I agree to Raze Galactic's Terms of Service, Privacy Policy, Refund Policy, and Accidental Vacuum Induced Asphyxiation Polciy"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/textView2"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
