--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,69 +4,58 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
-                                                   tools:context=".MainActivity">
+                                                   tools:context=".MainActivity"
+                                                   tools:layout_editor_absoluteY="81dp">
 
   <ImageView
       android:id="@+id/imageView2"
       android:layout_width="46dp"
       android:layout_height="46dp"
-      android:layout_marginStart="36dp"
-      android:layout_marginTop="50dp"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:srcCompat="@drawable/track_icon"/>
+      app:srcCompat="@drawable/track_icon"
+      tools:layout_editor_absoluteX="36dp"
+      tools:layout_editor_absoluteY="50dp"/>
 
   <TextView
       android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginStart="8dp"
       android:text="Raze Galactic"
       android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-      app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="@+id/imageView2"/>
+      tools:layout_editor_absoluteX="137dp"
+      tools:layout_editor_absoluteY="57dp"/>
 
   <Button
       android:id="@+id/button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="52dp"
       android:text="Google Sign-In"
-      app:layout_constraintBottom_toTopOf="@+id/button2"
-      app:layout_constraintStart_toStartOf="@+id/button2"
-      />
+      tools:layout_editor_absoluteX="137dp"
+      tools:layout_editor_absoluteY="231dp"/>
 
   <Button
       android:id="@+id/button2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
 
-      android:layout_marginBottom="52dp"
       android:text="Sign Up"
-      app:layout_constraintBottom_toTopOf="@+id/textView3"
-      app:layout_constraintStart_toStartOf="@+id/textView3"/>
+      tools:layout_editor_absoluteX="137dp"
+      tools:layout_editor_absoluteY="331dp"/>
 
   <Button
       android:id="@+id/button3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginStart="30dp"
       android:text="Login"
-      app:layout_constraintBottom_toBottomOf="@+id/button2"
-      app:layout_constraintStart_toEndOf="@+id/button2"
-      app:layout_constraintTop_toTopOf="@+id/button2"
-      />
+      tools:layout_editor_absoluteX="255dp"
+      tools:layout_editor_absoluteY="331dp"/>
 
   <TextView
       android:id="@+id/textView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="52dp"
       android:text="Show More"
-      app:layout_constraintBottom_toTopOf="@+id/textView4"
-      app:layout_constraintStart_toStartOf="@+id/textView4"/>
+      tools:layout_editor_absoluteX="137dp"
+      tools:layout_editor_absoluteY="431dp"/>
 
   <TextView
       android:id="@+id/textView4"
@@ -74,7 +63,6 @@
       android:layout_height="100dp"
 
       android:text="By signing up, I agree to Raze Galactic's Terms of Service, Privacy Policy, Refund Policy, and Accidental Vacuum Induced Asphyxiation Polciy"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintStart_toStartOf="@+id/textView2"
-      />
+      tools:layout_editor_absoluteX="137dp"
+      tools:layout_editor_absoluteY="502dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
