--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,58 +11,71 @@
       android:id="@+id/imageView2"
       android:layout_width="46dp"
       android:layout_height="46dp"
-      app:srcCompat="@drawable/track_icon"
-      tools:layout_editor_absoluteX="36dp"
-      tools:layout_editor_absoluteY="50dp"/>
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="30dp"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/track_icon"/>
 
   <TextView
       android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginBottom="79dp"
       android:text="Raze Galactic"
       android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-      tools:layout_editor_absoluteX="137dp"
-      tools:layout_editor_absoluteY="57dp"/>
+      app:layout_constraintBottom_toTopOf="@+id/button"
+      app:layout_constraintStart_toStartOf="@+id/button"
+      app:layout_constraintTop_toTopOf="@+id/imageView2"/>
 
   <Button
       android:id="@+id/button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginBottom="79dp"
       android:text="Google Sign-In"
-      tools:layout_editor_absoluteX="137dp"
-      tools:layout_editor_absoluteY="231dp"/>
+      app:layout_constraintBottom_toTopOf="@+id/button2"
+      app:layout_constraintStart_toStartOf="@+id/button2"/>
 
   <Button
       android:id="@+id/button2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
 
+      android:layout_marginBottom="79dp"
       android:text="Sign Up"
-      tools:layout_editor_absoluteX="137dp"
-      tools:layout_editor_absoluteY="331dp"/>
+      app:layout_constraintBottom_toTopOf="@+id/textView3"
+      app:layout_constraintStart_toStartOf="@+id/textView3"/>
 
   <Button
       android:id="@+id/button3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginStart="30dp"
       android:text="Login"
-      tools:layout_editor_absoluteX="255dp"
-      tools:layout_editor_absoluteY="331dp"/>
+      app:layout_constraintBottom_toBottomOf="@+id/button2"
+      app:layout_constraintStart_toEndOf="@+id/button2"
+      app:layout_constraintTop_toTopOf="@+id/button2"
+      app:layout_constraintVertical_bias="0.0"/>
 
   <TextView
       android:id="@+id/textView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginBottom="79dp"
       android:text="Show More"
-      tools:layout_editor_absoluteX="137dp"
-      tools:layout_editor_absoluteY="431dp"/>
+      app:layout_constraintBottom_toTopOf="@+id/textView4"
+      app:layout_constraintStart_toStartOf="@+id/textView4"/>
 
   <TextView
       android:id="@+id/textView4"
       android:layout_width="250dp"
       android:layout_height="100dp"
 
+      android:layout_marginBottom="8dp"
       android:text="By signing up, I agree to Raze Galactic's Terms of Service, Privacy Policy, Refund Policy, and Accidental Vacuum Induced Asphyxiation Polciy"
-      tools:layout_editor_absoluteX="137dp"
-      tools:layout_editor_absoluteY="502dp"/>
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
