--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
       android:id="@+id/imageView2"
       android:layout_width="46dp"
       android:layout_height="46dp"
-      android:layout_marginStart="16dp"
+      android:layout_marginStart="30dp"
       android:layout_marginTop="30dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
@@ -21,18 +21,19 @@
       android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="79dp"
+      android:layout_marginBottom="73dp"
+      android:layout_marginStart="30dp"
       android:text="Raze Galactic"
       android:textAppearance="@style/TextAppearance.AppCompat.Headline"
       app:layout_constraintBottom_toTopOf="@+id/button"
-      app:layout_constraintStart_toStartOf="@+id/button"
+      app:layout_constraintStart_toEndOf="@+id/imageView2"
       app:layout_constraintTop_toTopOf="@+id/imageView2"/>
 
   <Button
       android:id="@+id/button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="79dp"
+      android:layout_marginBottom="73dp"
       android:text="Google Sign-In"
       app:layout_constraintBottom_toTopOf="@+id/button2"
       app:layout_constraintStart_toStartOf="@+id/button2"/>
@@ -42,7 +43,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
 
-      android:layout_marginBottom="79dp"
+      android:layout_marginBottom="73dp"
       android:text="Sign Up"
       app:layout_constraintBottom_toTopOf="@+id/textView3"
       app:layout_constraintStart_toStartOf="@+id/textView3"/>
@@ -51,7 +52,7 @@
       android:id="@+id/button3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginStart="30dp"
+      android:layout_marginStart="28dp"
       android:text="Login"
       app:layout_constraintBottom_toBottomOf="@+id/button2"
       app:layout_constraintStart_toEndOf="@+id/button2"
@@ -62,7 +63,7 @@
       android:id="@+id/textView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="79dp"
+      android:layout_marginBottom="74dp"
       android:text="Show More"
       app:layout_constraintBottom_toTopOf="@+id/textView4"
       app:layout_constraintStart_toStartOf="@+id/textView4"/>
@@ -73,9 +74,8 @@
       android:layout_height="100dp"
 
       android:layout_marginBottom="8dp"
+      android:layout_marginStart="8dp"
       android:text="By signing up, I agree to Raze Galactic's Terms of Service, Privacy Policy, Refund Policy, and Accidental Vacuum Induced Asphyxiation Policy"
       app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.5"
-      app:layout_constraintStart_toStartOf="parent"/>
+      app:layout_constraintStart_toStartOf="@+id/textView2"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
